--- a/app/src/main/res/layout/rec_view_item_accounts_participants.xml
+++ b/app/src/main/res/layout/rec_view_item_accounts_participants.xml
@@ -13,17 +13,17 @@
 
 
     <TextView
-        android:id="@+id/text_Account_name_Micros"
+        android:id="@+id/textEmailUser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Juan Martinez"
         android:textColor="@color/title_rec_view_stake"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
 
-        app:layout_constraintBottom_toBottomOf="@+id/button4"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonType"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,10 +42,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="254dp" />
+        app:layout_constraintGuide_begin="241dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonType"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="Owner"
@@ -53,7 +53,7 @@
         android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text_Account_name_Micros"
+        app:layout_constraintStart_toEndOf="@+id/textEmailUser"
         app:layout_constraintTop_toTopOf="parent"
         android:backgroundTint="@color/button"
        />
