--- a/app/src/main/res/drawable/background_accounts_first.xml
+++ b/app/src/main/res/drawable/background_accounts_first.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#282828"
+        android:color="#1D262B"
         />
 
     <stroke android:width="3dp"
-        android:color="#282828"
+        android:color="#1D262B"
         />
 
     <padding android:left="1dp"
