--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -16,10 +16,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="@color/black"
+        android:layout_height="110dp"
+        android:background="#232F34"
         android:contentDescription="container"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:alpha="1"
-        android:background="@drawable/background_buttons"
+        android:background="@drawable/background_accounts_first"
         android:contentDescription="@string/settings"
         android:paddingHorizontal="15dp"
         android:paddingLeft="5dp"
@@ -128,7 +129,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="7dp"
         android:text="Selected Period:"
         app:layout_constraintBottom_toTopOf="@+id/text_currentBalanceFix"
         app:layout_constraintStart_toStartOf="@+id/main_container"
@@ -306,6 +308,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_exportFAB"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -316,7 +319,7 @@
             android:layout_toLeftOf="@+id/btn_newFAB"
             android:alpha="1"
             android:contentDescription="@string/settings"
-            app:backgroundTint="@color/fb_color"
+            app:backgroundTint="@color/transaction_processed_positive"
             app:fabCustomSize="60dp"
             app:maxImageSize="40dp"
             app:srcCompat="@drawable/ic_export" />
