--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="accent">#206DDA</color>
+    <color name="purple_200">#E91E63</color>
+    <color name="purple_500">#E91E63</color>
+    <color name="purple_700">#E91E63</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="contador_red">#CC0303</color>
-    <color name="contador_bg">#36393F</color>
+    <color name="contador_bg">#4A6572</color>
     <color name="green">#00FF00</color>
-    <color name="dark_grey">#343434</color>
+    <color name="dark_grey">#0F1315</color>
     <color name="cash_out">#ffc7c7</color>
     <color name="rec_view_gray">#36393F</color>
-    <color name="rec_view_transactions">#282828</color>
+    <color name="rec_view_transactions">#1D262B</color>
     <color name="rec_view_title">#eed075</color>
     <color name="transaction_processed_positive">#e8c148</color>
     <color name="transaction_processed_negative">#eed075</color>
@@ -22,12 +23,12 @@
     <color name="rec_view_negative_amount">#e4b31d</color>
     <color name="fb_color">#cfa219</color>
     <color name="text_titles">#e4b31d</color>
-    <color name="button">#b89016</color>
+    <color name="button">#cfa219</color>
     <color name="light_grey">#8d8c8c</color>
     <color name="transparent">#00A3A3A3</color>
     <color name="dark_header">#1c1c1c</color>
     <color name="light_red_warning">#ff8989</color>
-    <color name="toolBar_color">#141414</color>
+    <color name="toolBar_color">#344955</color>
     <color name="superDarkGrey">#141414</color>
     <color name="FabColor2">#cf8419</color>
     <color name="blur_background">#B9000000</color>
