--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,15 @@
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:textColor">@color/button</item>
     </style>
+
+    <style name="dropMenu" parent="@android:style/TextAppearance">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/contador_red</item>
+        <item name="colorControlHighlight">@color/button</item>
+    </style>
+    <style name="Autocomplete">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/black</item>
+    </style>
+
 </resources>
