set up for excel export

--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -316,6 +316,7 @@
             android:layout_toLeftOf="@+id/btn_newFAB"
             android:alpha="1"
             android:contentDescription="@string/settings"
+            android:visibility="visible"
             app:backgroundTint="@color/fb_color"
             app:fabCustomSize="60dp"
             app:maxImageSize="40dp"
