--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -115,7 +115,7 @@
         android:id="@+id/text_sumCashOutFix"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sum of cash Out:"
+        android:text="Sum of cash out:"
         android:alpha="0"
         app:layout_constraintStart_toStartOf="@+id/guidelineHeaders"
         app:layout_constraintTop_toBottomOf="@+id/text_startBalanceFix"
@@ -179,7 +179,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:alpha="0"
-        android:text="Sum of Receivables:"
+        android:text="Sum of receivables:"
         app:layout_constraintStart_toStartOf="@+id/guidelineHeaders"
         app:layout_constraintTop_toBottomOf="@+id/text_currentBalanceFix" />
 
@@ -203,7 +203,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:alpha="0"
-        android:text="Sum of Payables:"
+        android:text="Sum of payables:"
         app:layout_constraintStart_toStartOf="@+id/guidelineHeaders"
         app:layout_constraintTop_toBottomOf="@+id/text_receivablesFix" />
 
@@ -228,7 +228,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:alpha="0"
-        android:text="Schedule Balance:"
+        android:text="Schedule balance:"
         app:layout_constraintStart_toStartOf="@+id/guidelineHeaders"
         app:layout_constraintTop_toBottomOf="@+id/text_payablesFix" />
 
