--- a/app/src/main/res/layout/rec_view_item_accounts.xml
+++ b/app/src/main/res/layout/rec_view_item_accounts.xml
@@ -28,18 +28,22 @@
 
         <TextView
             android:id="@+id/text_Account_name"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:text="Gonzales Ortega"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
+            android:gravity="left"
+            android:text="Gonzales Ortega"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAllCaps="true"
             android:textColor="@color/text_titles"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text_Account_balance"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline9"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="20dp" />
 
         <TextView
             android:layout_marginLeft="25dp"
