--- a/app/src/main/res/menu/top_three_buttons_menu.xml
+++ b/app/src/main/res/menu/top_three_buttons_menu.xml
@@ -27,6 +27,11 @@
             android:visible="false"
             app:showAsAction="always|collapseActionView"
             app:actionViewClass="androidx.appcompat.widget.SearchView" />
+        <item android:id="@+id/menu_export"
+            android:icon="@drawable/ic_round_drive_folder_upload_24"
+            android:title="export"
+            android:visible="false"
+            app:showAsAction="ifRoom"/>
         <item android:id="@+id/menu_filter"
             android:icon="@drawable/ic_baseline_filter_alt_24"
             android:title="@string/filter"
@@ -37,6 +42,8 @@
             android:title="bottonSheet"
             android:visible="true"
             app:showAsAction="ifRoom"/>
+
+
 
 
     </group>
