--- a/app/src/main/res/menu/top_three_buttons_menu.xml
+++ b/app/src/main/res/menu/top_three_buttons_menu.xml
@@ -21,6 +21,11 @@
             android:title="add"
             android:visible="true"
             app:showAsAction="ifRoom"/>
+        <item android:id="@+id/menu_add_stake"
+            android:icon="@drawable/ic_baseline_person_add_24"
+            android:title="add stakeholder"
+            android:visible="false"
+            app:showAsAction="ifRoom"/>
         <item android:id="@+id/menu_search"
             android:icon="@drawable/ic_baseline_search_24"
             android:title="@string/search"
@@ -37,6 +42,7 @@
             android:title="@string/filter"
             android:visible="false"
             app:showAsAction="always"/>
+
         <item android:id="@+id/menu_bottom_sheet"
             android:icon="@drawable/ic_baseline_menu_24"
             android:title="bottonSheet"
