able to ignore scheduled transactions

--- a/app/src/main/res/layout/dialog_filter_scheduled_transactions.xml
+++ b/app/src/main/res/layout/dialog_filter_scheduled_transactions.xml
@@ -31,4 +31,12 @@
         android:text="@string/completed"
         android:textSize="18sp" />
 
+    <CheckBox
+        android:id="@+id/check_box_ignored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="15dp"
+        android:text="@string/ignored"
+        android:textSize="18sp" />
+
 </LinearLayout>
