--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/allTransactions2"
         android:icon="@drawable/ic_round_analytics_24"
         android:title="@string/summary"
@@ -8,6 +7,10 @@
     <item android:id="@+id/stakeholders"
         android:icon="@drawable/ic_baseline_people_alt_24"
         android:title="@string/stakeholdersPlural"
+        />
+    <item android:id="@+id/propertiesList"
+        android:icon="@drawable/ic_baseline_home_work_24"
+        android:title="@string/properties"
         />
 
 </menu>
