--- a/app/src/main/res/menu/top_three_buttons_menu.xml
+++ b/app/src/main/res/menu/top_three_buttons_menu.xml
@@ -49,6 +49,11 @@
             android:title="bottonSheet"
             android:visible="true"
             app:showAsAction="ifRoom"/>
+        <item android:id="@+id/menu_add_property"
+            android:icon="@drawable/ic_baseline_add_home_work_24"
+            android:title="add_property"
+            android:visible="false"
+            app:showAsAction="ifRoom"/>
 
 
 
