--- a/app/src/main/res/layout/fragment_contract_new_sub_contract.xml
+++ b/app/src/main/res/layout/fragment_contract_new_sub_contract.xml
@@ -28,6 +28,15 @@
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/text_newTransaction_wordCounter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/light_grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/payment_new_title"
+                android:layout_marginStart="5dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
@@ -74,7 +83,7 @@
             android:id="@+id/payment_new_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:hint="@string/amount"
             android:inputType="numberDecimal"
             android:maxLength="22"
@@ -84,7 +93,7 @@
             android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:gravity="center" >
 
@@ -112,111 +121,94 @@
                 android:translationX="-30dp" />
 
         </RadioGroup>
+        <TextView
+            android:id="@+id/actv_property"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/property"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/text_propertySelected"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:gravity="left"
+            android:layout_marginTop="5dp"
+            android:background="@color/rec_view_gray"
+            android:text="@string/none"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:id="@+id/actv_stakeholder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/stakeholder"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/text_stakeholderSelected"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:gravity="left"
+            android:layout_marginTop="5dp"
+            android:background="@color/rec_view_gray"
+            android:text="@string/none"
+            android:textColor="@color/white"
+            />
 
         <TextView
             android:id="@+id/payment_new_frequency_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
+            android:paddingTop="10dp"
             android:text="@string/frequency"
             android:textSize="18sp" />
-
         <Spinner
             android:id="@+id/payment_new_frequency"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:spinnerMode="dialog" />
+            android:layout_height="wrap_content"
+            android:paddingVertical="20dp"
+            android:layout_marginTop="5dp"
+            android:popupBackground="@color/rec_view_gray"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/payment_new_customFrequencyLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/payment_new_customFrequency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:hint="@string/frequency"
-                android:inputType="number"
-                android:maxLength="22"
-                android:minHeight="48dp"
-                app:layout_constraintEnd_toStartOf="@+id/payment_new_customFrequencySpinner"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Spinner
-                android:id="@+id/payment_new_customFrequencySpinner"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:spinnerMode="dialog"
-                app:layout_constraintBottom_toBottomOf="@+id/payment_new_customFrequency"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/payment_new_customFrequency" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <LinearLayout
-            android:id="@+id/payment_new_start_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/payment_new_startLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:text="@string/start"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/payment_new_start"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_buttons"
-                android:text="N/A"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/payment_new_duration_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Spinner
-                    android:id="@+id/payment_new_durationSpinner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:spinnerMode="dialog"
-                    app:layout_constraintBottom_toBottomOf="@+id/payment_new_duration"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/payment_new_duration" />
-
-                <EditText
-                    android:id="@+id/payment_new_duration"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:hint="@string/duration"
-                    android:inputType="number"
-                    android:maxLength="22"
-                    android:minHeight="48dp"
-                    app:layout_constraintEnd_toStartOf="@+id/payment_new_durationSpinner"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
 
         <TextView
+            android:id="@+id/payment_new_startLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/start"
+            android:textSize="18sp" />
+
+        <Button
+            android:layout_marginTop="5dp"
+            android:id="@+id/payment_new_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_buttons"
+            android:text="N/A"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/payment_new_duration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="Amount of future transactions"
+            android:inputType="number"
+            android:maxLength="22"
+            android:minHeight="48dp"
+            app:layout_constraintEnd_toStartOf="@+id/payment_new_durationSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
             android:id="@+id/payment_new_info"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top|left"
@@ -226,20 +218,28 @@
         <EditText
             android:id="@+id/payment_new_notes"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="20dp"
-            android:gravity="top|left"
-            android:hint="@string/notes"
-            android:inputType="number"
-            android:maxLength="22"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="@string/additional_comments"
+            android:inputType="textMultiLine"
             android:minHeight="48dp" />
+        <TextView
+            android:id="@+id/text_newTransaction_wordCounter_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/payment_new_confirm"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background_buttons"
             android:text="@string/confirm" />
+
+
 
     </LinearLayout>
 </ScrollView>
