--- a/app/src/main/res/layout/rec_view_item_all_micros.xml
+++ b/app/src/main/res/layout/rec_view_item_all_micros.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="Tenant"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
             app:layout_constraintTop_toBottomOf="@+id/text_Account_name_Micros" />
 
